k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: 078238935484.dkr.ecr.ap-south-1.amazonaws.com/eks-todo-backend:10ff22e6534924dc6cd369446f945743d59fd740
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
